src/objects/Funding_Source__c.object
<CustomObject>
    <description>Funding Source</description>
    <fields>
        <fullName>Account_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Purpose Code &amp; Program Manager</label>
        <referenceTo>Account_Purpose__c</referenceTo>
        <relationshipLabel>Funding Source</relationshipLabel>
        <relationshipName>Funding_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Yr_Basis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Fiscal Year and Fund Code</label>
        <referenceTo>Fiscal_Yr_Basis__c</referenceTo>
        <relationshipLabel>Funding Source</relationshipLabel>
        <relationshipName>Funding_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funds_Remaining__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_location_number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Location Code</label>
        <referenceTo>Grant_location_number__c</referenceTo>
        <relationshipLabel>Funding Source</relationshipLabel>
        <relationshipName>Funding_Sources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO/RFP ID</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Funding Source (NOFO/RFP)</relationshipLabel>
        <relationshipName>Funding_Source1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Object_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Object Class Code</label>
        <referenceTo>Object_code__c</referenceTo>
        <relationshipLabel>Funding Source</relationshipLabel>
        <relationshipName>Funding_Source</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Funding Source</label>
    <listViews>
        <fullName>X2017_OPE1</fullName>
        <columns>NAME</columns>
        <columns>Fiscal_Yr_Basis__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Fiscal_Yr_Basis__c</field>
            <operation>startsWith</operation>
            <value>2017</value>
        </filters>
        <label>2017-OPE1</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Funding Source ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding Source</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Fiscal_Year_and_Fund_Code_Valida</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
	OR( 
	ISNEW(), 
	ISCHANGED( Name ) 
	), 
	NOT( 
	ISBLANK ( 
	VLOOKUP( $ObjectType.Fiscal_Yr_Basis__c.Fields.Name, $ObjectType.Fiscal_Yr_Basis__c.Fields.Name, Name ) 
	) 
	) 
)</errorConditionFormula>
        <errorDisplayField>Fiscal_Yr_Basis__c</errorDisplayField>
        <errorMessage>Field is unique.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Funding_Source_Not_Editable</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(NOFA__r.Status__c, &apos;Review in Progress&apos;),NOT(  ISNEW()))</errorConditionFormula>
        <errorMessage>Funding Source is not Editable if Nofa is in &apos;Review in Progress&apos;</errorMessage>
    </validationRules>
</CustomObject>